Outliner 'select hierarchy' doesn't work has expected #53342

Closed
opened 2017-11-18 16:20:17 +01:00 by colin · 7 comments

Select Hierarchy has some troubles:

  • It use swap / toggle selection who lead some annoy like click twice on 'select hierarchy' to get the expected result. Even if the expected thing is to have a swap it's doesn't work cause ops do the swap only on the clicked outliner item.

  • This bug came with 2.78. The first 'Select hierarchy' does nothing, even not a swap.

For the first point I propose to remove swap and replace by a simple select. If there is an interest to have swap it could be an other ops.

And for the bug if someone have an idea, otherwise I'm on it.

Select Hierarchy has some troubles: - It use swap / toggle selection who lead some annoy like click twice on 'select hierarchy' to get the expected result. Even if the expected thing is to have a swap it's doesn't work cause ops do the swap only on the clicked outliner item. - This bug came with 2.78. The first 'Select hierarchy' does nothing, even not a swap. For the first point I propose to remove swap and replace by a simple select. If there is an interest to have swap it could be an other ops. And for the bug if someone have an idea, otherwise I'm on it.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @col-one

Added subscriber: @col-one
colin self-assigned this 2017-11-18 16:20:27 +01:00

Added subscribers: @lichtwerk, @zeauro

Added subscribers: @lichtwerk, @zeauro

I confirm that Select Hierarchy have an erratic behaviour in 2.79 and master 40c8a18.
Sometimes, it selects hieararchy of active object.
Sometimes, it highlights items of hierarchy in outliner.
Sometimes it collapses hierarchy.

@lichtwerk , What was the purpose of this operator ?

I confirm that Select Hierarchy have an erratic behaviour in 2.79 and master 40c8a18. Sometimes, it selects hieararchy of active object. Sometimes, it highlights items of hierarchy in outliner. Sometimes it collapses hierarchy. @lichtwerk , What was the purpose of this operator ?
Author

I take a look to the source code. Here my conclusion,
The problem with 'select hierarchy' is that it uses last click position to define the parent item, therefore it can happen the last click is the menu ops 'select hierarchy' itself at a different click position. It works when blender reminds the last ops menu and puts it under the cursor, in this case the first click and the second click have nearly same positions.
Here a gif to illustrate the problem.
selectehierarchyfail.gif

I think it's possible to do a patch to fix this, but an outliner redesign would be a good idea, I think It's getting hard to maintain.

I take a look to the source code. Here my conclusion, The problem with 'select hierarchy' is that it uses last click position to define the parent item, therefore it can happen the last click is the menu ops 'select hierarchy' itself at a different click position. It works when blender reminds the last ops menu and puts it under the cursor, in this case the first click and the second click have nearly same positions. Here a gif to illustrate the problem. ![selectehierarchyfail.gif](https://archive.blender.org/developer/F1159986/selectehierarchyfail.gif) I think it's possible to do a patch to fix this, but an outliner redesign would be a good idea, I think It's getting hard to maintain.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by ed3b7a5cd4

This issue was referenced by ed3b7a5cd4597274f523d832494eabdf153aa597
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53342
No description provided.